# cfsm

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/cfsm/: cfsm.h  cfsm_nullptr.h
src/: CMakeLists.txt  cfsm.c
test/: CMakeLists.txt  cfsm_test_init.c  cfsm_test_init.cpp  cfsm_test_processing.c  cfsm_test_processing.cpp  cfsm_test_runner.h  cfsm_test_state_actions.c  cfsm_test_state_actions.cpp  cfsm_test_submachines.c  cfsm_test_suite.c  cfsm_test_suite.h  cfsm_ut.c
test/cfsm_test/: cfsm_test_runner.c  cfsm_test_runner.h
